--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,10 @@
 
 /** --------HEADER---------**/
 .bg-body-tertiary {
-    background-color: rgba(0, 0, 0, 0) !important ;
+    background-color: rgba(0, 0, 0, 0) !important;
 }
-.navbar-collapse{
+
+.navbar-collapse {
     flex-grow: 0;
 }
 
@@ -31,6 +32,7 @@ header nav div div ul li {
     margin: 10px;
     box-sizing: content-box;
     border: solid #000000 5px;
+    border-radius: 10px;
     padding: 5px;
     text-align: center;
     border-style: groove;
@@ -52,59 +54,80 @@ header nav ul li a {
 /**-------------- MAIN-------------**/
 
 /** -------------Sec1--------------**/
-.carousel {
-    justify-content: center;
+
+
+.carousel{
+    background-color: #00000000;
+}
+.carousel-inner{
+    
 }
 .carousel-caption p {
     background-color: #00000000;
     color: aliceblue;
     text-shadow: 3px 4px 4px #000000;
     font-weight: 600;
-    font-size: 25px;
-    width: 500px;
+    font-size: 30px;
+    width: 650px;
     height: 600px;
     position: absolute;
     top: 10%;
+    left: 10%;
 }
-.carousel-caption h5{
+
+.carousel-caption h5 {
+    width: fit-content;
+    padding: 0px 10px 5px 10px;
     background-color: rgb(112, 128, 144);
     color: aliceblue;
     border-radius: 5px;
     text-shadow: 3px 4px 4px #000000;
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 400;
+    position: absolute;
+    left: 50%;
 }
-.carousel-item{
+
+.carousel-item {
     position: relative;
-    display: flex;
-    justify-content: center;
 }
-.carousel-indicators{
+
+.carousel-indicators {
     background-color: #00000000;
 }
-.carousel-caption{
+
+.carousel-caption {
     background-color: #00000000;
     position: absolute;
     top: 10%;
-    left: 60%;
-    
+    left: 58%;
 }
 
 
-.carousel-item img{
+.carousel-item img {
     position: relative;
-    margin: 20px 20px 20px 20px !important;
-    width: 80% !important;
-    height: 100vh !important;
+    width: 100%;
+    height: 100vh;
     border-radius: 30px;
     box-shadow: 12px 10px 10px rgba(48, 47, 47, 0.619), -12px -10px 10px rgb(48, 47, 47, 0.619), -12px 10px 10px rgb(48, 47, 47, 0.619), 12px -10px 10px rgb(48, 47, 47, 0.619);
 }
 
-/* -------------Sec2--------------*/
+.carousel-control-next-icon {
+    background-color: #000000;
+    border-radius: 5px;
+}
+
+.carousel-control-prev-icon {
+    background-color: #000000;
+    border-radius: 5px;
+}
+
+
+/* -------------Sec3--------------*/
 .sec2 {
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-template-rows: 200px 100px 400px 100px 400px;
+    grid-template-rows: 300px 100px 400px 100px 400px;
     grid-template-areas:
         "titulo titulo"
         ". subtit1"
@@ -112,6 +135,7 @@ header nav ul li a {
         ". subtit2"
         "foto2 parrafo2"
     ;
+    padding-bottom: 30px;
 }
 
 .titulo {
@@ -144,19 +168,20 @@ header nav ul li a {
 
 .sec2 h2 {
     width: fit-content;
-    background-color: aliceblue;
+    background-color: rgb(112, 128, 144);
     border-radius: 20px;
     justify-self: center;
     align-self: center;
     font-size: 50px;
     font-weight: 700;
     padding: 0px 10px 0px 10px;
+    margin-bottom: 50px;
 }
 
 .sec2 h3 {
     width: fit-content;
     height: fit-content;
-    background-color: aliceblue;
+    background-color: rgb(206, 191, 191);
     border-radius: 20px;
     justify-self: center;
     display: flex;
@@ -194,17 +219,17 @@ header nav ul li a {
     width: 400px;
     height: auto;
     border-radius: 50%;
-    background-color: aliceblue;
+    background-color: rgb(112, 128, 144);
     padding: 20px;
 
 }
 
-/** -------------Sec3--------------**/
+/** -------------Sec2--------------**/
 .barra-grid {
     height: 100vh;
     display: grid;
-    grid-template-columns: 6 1fr;
-    grid-template-rows: 45% 6% 45%;
+    grid-template-columns: 6fr;
+    grid-template-rows: 47% 6% 47%;
     grid-template-areas:
         "imagen1 . imagen3 . imagen5 ."
         "barra barra barra barra barra barra"
@@ -268,6 +293,7 @@ header nav ul li a {
     background-color: #ffffff;
     padding: 0px 5px 0px 5px;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 .barra-grid div p {
@@ -327,9 +353,11 @@ footer {
     display: flex;
     justify-content: center;
 }
-footer div{
+
+footer div {
     background-color: rgb(112, 128, 144);
 }
+
 footer div a img {
     height: 50px;
     width: 50px;
@@ -343,27 +371,138 @@ footer p {
     text-shadow: 3px 4px 4px #000000;
     text-align: center;
     font-size: 25px;
-    background-color: rgba(112, 128, 144, 0.658);
+    background-color: rgba(112, 128, 144);
 }
 
 /*!-             MEDIA QUERY-!*/
-@media screen and (max-width: 1260px) {
-    .hero ul div li p {
-        color: rgb(0, 136, 255);
+@media screen and ((max-width: 1750px) and (min-width: 1500px)) {
+
+
+    .carousel-caption {
         font-size: 30px;
+        left: 50%;
+    }
+
+    .carousel-caption h5 {
+        left: 40%;
+    }
+
+    .carousel-item img {
         position: static;
-        width: 100%;
+    }
+
+}
+
+@media screen and ((max-width: 1500px)) {
+
+    /*        SEC 1       */
+    .hero{
+        height: 1400px;
+    }
+
+    .carousel {
+        height: 1400px;
+    }
+
+    .carousel-item {
+        height: 1400px;
+    }
+    .carousel-item img{
         height: auto;
     }
 
-    .slider ul div li img {
-        position: static;
+    .carousel-caption {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: 65%;
+        left: -5%;
+    }
+    .carousel-caption h5{
+        top: 0%;
+    }
+    .carousel-caption p {
+        width: 90%;
+        height: 400px;
     }
 
-    .slider ul div li {
-        position: static;
-        flex-direction: column;
-        height: 1050px;
-        align-items: flex-start;
+    /*          SEC 2             */
+    .barra-grid {
+        height: 1200px;
+    }
+
+    /*            SEC 3            */
+    .sec2 {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px 400px 50px 500px 400px 50px 500px;
+        grid-template-areas:
+            "titulo"
+            "foto1"
+            "subtit1"
+            "parrafo1"
+            "foto2"
+            "subtit2"
+            "parrafo2"
+        ;
+    }
+
+    .div2 {
+        margin-bottom: 0;
+    }
+
+    .sec2 p {
+        text-align: center;
+    }
+}
+
+@media screen and ((max-width:1200px) and (min-width:1000px)) {
+    .barra-grid {
+        grid-template-columns: 3fr;
+        grid-template-rows: 47% 6% 47%;
+        grid-template-areas:
+            "imagen1  imagen3  imagen5 "
+            "barra barra barra"
+            " imagen2  imagen4  imagen6"
+        ;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+
+    .carousel{
+        height: auto;
+    }
+    .carousel-item img{
+        height: auto;
+    }
+    .carousel-caption p{
+        font-size: 25px;
+        top:10%
+    }
+    .carousel-caption h5{
+        top: -10%
+    }
+    .sec2{
+        display: grid;
+        grid-template-rows: 200px 400px 50px 800px 400px 50px 800px;
+    }
+
+    .barra-grid {
+        grid-template-columns: 3fr;
+        grid-template-rows: 47% 6% 47%;
+        grid-template-areas:
+            "imagen1  imagen3  imagen5 "
+            "barra barra barra"
+            " imagen2  imagen4  imagen6"
+        ;
+    }
+    .sec2 h2{
+        text-align: center;
+    }
+}
+@media screen and (max-width:770px){
+    .carousel-caption p{
+
     }
 }
