--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,52 +1,6 @@
-header {
-    nav {
-        .bg-body-tertiary{
-            
-        }
-        div {
-            a {
-                img {
-                    width: 220px;
-                    height: 150px;
-                }
-            }
-
-            button {}
-
-            div {
-                .navbar-collapse{
-                    flex-grow: 0;
-                }
-                ul {
-                    list-style: none;
-                    width: 600px;
-                    justify-content: space-between;
-                    margin-right: 50px;
-
-                    li {
-                        background-color: rgb(206, 191, 191);
-                        margin: 10px;
-                        box-sizing: content-box;
-                        border: solid #000000 5px;
-                        border-radius: 10px;
-                        padding: 5px;
-                        text-align: center;
-                        border-style: groove;
-                        align-self: center;
-
-                        &:hover {
-                            border: solid white 5px;
-                            border-style: groove;
-                        }
-
-                        a {
-                            text-decoration: none;
-                            color: black;
-                            font-weight: 500;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+@import "./base/generales";
+@import "./base/operaciones";
+@import "./components/header";
+@import "./components/main";
+@import "./components/footer";
+@import "./base/media-querys";
