--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,5 +2,9 @@
 @import "./base/operaciones";
 @import "./components/header";
 @import "./components/main";
+@import "./components/proyecto";
+@import "./components/tienda";
+@import "./components/mapa";
+@import "./components/contactos";
 @import "./components/footer";
 @import "./base/media-querys";
