--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,12 @@
+/*           VARIABLES                 */
 * {
-  background-color: #998e8e;
   box-sizing: border-box;
   margin: 0;
   padding: 0; }
 
 body {
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #e0e0e0; }
 
 .bg-body-tertiary {
   background-color: rgba(0, 0, 0, 0) !important; }
@@ -13,6 +14,7 @@ body {
 .navbar-collapse {
   flex-grow: 0; }
 
+/*              MAIN             */
 .carousel {
   background-color: #00000000; }
 
@@ -27,33 +29,51 @@ body {
   background-color: #000000;
   border-radius: 5px; }
 
-/*           VARIABLES                 */
-header nav div a img {
-  width: 220px;
-  height: 150px; }
+/*            MAPA             */
+#btn1 {
+  left: 27%;
+  top: 45%; }
 
-header nav div div ul {
-  list-style: none;
-  width: 600px;
-  justify-content: space-between;
-  margin-right: 50px; }
-  header nav div div ul li {
-    background-color: #cebfbf;
-    margin: 10px;
-    box-sizing: content-box;
-    border: solid #000000 5px;
-    border-radius: 10px;
-    padding: 5px;
-    text-align: center;
-    border-style: groove;
-    align-self: center; }
-    header nav div div ul li:hover {
-      border: solid white 5px;
-      border-style: groove; }
-    header nav div div ul li a {
-      text-decoration: none;
-      color: black;
-      font-weight: 500; }
+#btn2 {
+  left: 37%;
+  top: 55%; }
+
+#btn3 {
+  left: 68%;
+  top: 38%; }
+
+#btn4 {
+  left: 78%;
+  top: 60%; }
+
+header {
+  background: slategray;
+  background: linear-gradient(180deg, slategray 32%, rgba(125, 139, 153, 0.937412) 62%, #e0e0e0 100%); }
+  header nav div a img {
+    width: 220px;
+    height: 150px; }
+  header nav div div ul {
+    list-style: none;
+    width: 600px;
+    justify-content: space-between;
+    margin-right: 50px; }
+    header nav div div ul li {
+      background-color: #cebfbf;
+      margin: 10px;
+      box-sizing: content-box;
+      border: solid #000000 5px;
+      border-radius: 10px;
+      padding: 5px;
+      text-align: center;
+      border-style: groove;
+      align-self: center; }
+      header nav div div ul li:hover {
+        border: solid white 5px;
+        border-style: groove; }
+      header nav div div ul li a {
+        text-decoration: none;
+        color: black;
+        font-weight: 500; }
 
 /*           seccion 1              */
 .hero div div div {
@@ -62,8 +82,7 @@ header nav div div ul {
     position: relative;
     width: 100%;
     height: 100vh;
-    border-radius: 30px;
-    box-shadow: 12px 10px 10px rgba(48, 47, 47, 0.619), -12px -10px 10px rgba(48, 47, 47, 0.619), -12px 10px 10px rgba(48, 47, 47, 0.619), 12px -10px 10px rgba(48, 47, 47, 0.619); }
+    border-radius: 30px; }
   .hero div div div div {
     background-color: #00000000;
     position: absolute;
@@ -93,79 +112,84 @@ header nav div div ul {
       left: 10%; }
 
 /*            seccion 2                  */
-.sec3 h2 {
-  font-size: 50px;
-  text-align: center; }
-
-.sec3 section {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 6fr;
-  grid-template-rows: 47% 6% 47%;
-  grid-template-areas: "imagen1 . imagen3 . imagen5 ." "barra barra barra barra barra barra" ". imagen2 . imagen4 . imagen6"; }
-  .sec3 section .im1 {
-    grid-area: imagen1; }
-  .sec3 section .im2 {
-    grid-area: imagen2; }
-  .sec3 section .im3 {
-    grid-area: imagen3; }
-  .sec3 section .im4 {
-    grid-area: imagen4; }
-  .sec3 section .im5 {
-    grid-area: imagen5; }
-  .sec3 section .im6 {
-    grid-area: imagen6; }
-  .sec3 section .barra {
-    grid-area: barra; }
-  .sec3 section div {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .sec3 section div:not(.barra) {
-      flex-direction: column; }
-    .sec3 section div h3 {
-      border-radius: 20px;
-      background-color: #ffffff;
-      padding: 0px 5px 0px 5px;
-      margin-bottom: 5px;
-      text-align: center; }
-    .sec3 section div img {
-      width: 200px;
-      height: auto;
-      border-radius: 20px;
-      box-shadow: 10px 10px 10px rgba(24, 24, 24, 0.651);
-      margin-bottom: 10px; }
-    .sec3 section div p {
-      background-color: #00000000;
-      text-align: center;
-      font-size: 15px; }
-  .sec3 section .barra p {
-    font-weight: 300;
-    font-size: 20px; }
-  .sec3 section .barra input {
-    -webkit-appearance: none;
-    width: 90%;
-    height: 15px;
-    border-radius: 5px;
-    background: #ffffff;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    display: flex; }
-    .sec3 section .barra input::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      background: #ffffff;
-      cursor: pointer;
-      box-shadow: 0px 0px 11px 8px rgba(0, 0, 0, 0.26);
-      background: url(https://www.flaticon.com/svg/vstatic/svg/59/59089.svg?token=exp=1614064733~hmac=a6f0cce2214fdb52e7df9eec24006427) #ffffff;
-      background-size: 45%;
-      background-position: center;
-      background-repeat: no-repeat; }
+.sec3 {
+  height: fit-content; }
+  .sec3 h2 {
+    font-size: 50px;
+    text-align: center;
+    padding-bottom: 100px; }
+  .sec3 section {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 6fr;
+    grid-template-rows: 60% 12% 60%;
+    grid-template-areas: "imagen1 . imagen3 . imagen5 ." "barra barra barra barra barra barra" ". imagen2 . imagen4 . imagen6"; }
+    .sec3 section .im1 {
+      grid-area: imagen1; }
+    .sec3 section .im2 {
+      grid-area: imagen2; }
+    .sec3 section .im3 {
+      grid-area: imagen3; }
+    .sec3 section .im4 {
+      grid-area: imagen4; }
+    .sec3 section .im5 {
+      grid-area: imagen5; }
+    .sec3 section .im6 {
+      grid-area: imagen6; }
+    .sec3 section .barra {
+      grid-area: barra; }
+    .sec3 section div {
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .sec3 section div:not(.barra) {
+        flex-direction: column; }
+      .sec3 section div h3 {
+        border-radius: 20px;
+        background-color: #ffffff;
+        padding: 0px 5px 0px 5px;
+        margin-bottom: 5px;
+        text-align: center; }
+      .sec3 section div img {
+        width: 200px;
+        height: auto;
+        border-radius: 20px;
+        box-shadow: 10px 10px 10px rgba(24, 24, 24, 0.651);
+        margin-bottom: 10px; }
+      .sec3 section div p {
+        background-color: #00000000;
+        text-align: center;
+        font-size: 15px; }
+    .sec3 section .barra {
+      justify-content: center; }
+      .sec3 section .barra p {
+        font-weight: 300;
+        font-size: 20px;
+        text-align: center; }
+      .sec3 section .barra input {
+        -webkit-appearance: none;
+        width: 85%;
+        height: 15px;
+        border-radius: 5px;
+        background: slategray;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+        display: flex; }
+        .sec3 section .barra input::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          appearance: none;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          background: #ffffff;
+          cursor: pointer;
+          box-shadow: 0px 0px 11px 8px rgba(0, 0, 0, 0.26);
+          background: url(https://www.flaticon.com/svg/vstatic/svg/59/59089.svg?token=exp=1614064733~hmac=a6f0cce2214fdb52e7df9eec24006427) #ffffff;
+          background-size: 45%;
+          background-position: center;
+          background-repeat: no-repeat; }
 
 /*                 seccion 3               */
 .sec2 {
@@ -229,6 +253,93 @@ header nav div div ul {
     align-self: center;
     margin-right: 50px; }
 
+.sec1Proyecto {
+  background-color: #e0e0e0; }
+  .sec1Proyecto div {
+    background-color: #e0e0e0;
+    margin-bottom: 50px;
+    border: none; }
+    .sec1Proyecto div div {
+      padding-bottom: 30px;
+      background-color: slategray;
+      font-size: 50px;
+      font-weight: 600;
+      color: black;
+      text-shadow: 5px 5px 10px #2e2e2e; }
+    .sec1Proyecto div div {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .sec1Proyecto div div h5 {
+        color: white;
+        font-size: 30px;
+        font-weight: 400;
+        padding-bottom: 20px;
+        background-color: slategray;
+        border-radius: 10px;
+        width: fit-content;
+        padding-inline: 20px; }
+      .sec1Proyecto div div p {
+        font-size: 25px;
+        font-weight: 200;
+        padding: 0px 20px 0px 20px; }
+  .sec1Proyecto h2 {
+    padding-bottom: 30px;
+    background-color: slategray;
+    font-size: 50px;
+    font-weight: 600;
+    color: black;
+    text-shadow: 5px 5px 10px #2e2e2e;
+    text-align: center; }
+  .sec1Proyecto div {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 50px;
+    align-items: center; }
+    .sec1Proyecto div iframe {
+      width: 70%;
+      margin: 50px;
+      border-radius: 10px;
+      box-shadow: 10px 10px 10px #000000b9; }
+    .sec1Proyecto div div {
+      display: flex;
+      justify-content: center;
+      background-color: #00000000; }
+      .sec1Proyecto div div p {
+        background-color: #cebfbf;
+        border-radius: 5px;
+        font-size: 25px;
+        font-weight: 200;
+        text-align: center;
+        width: 70%; }
+
+.mapa h2 {
+  font-size: 50px;
+  text-align: center;
+  background-color: slategray; }
+
+.mapa div {
+  transition: button .6 0 linear;
+  position: relative; }
+  .mapa div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative; }
+  .mapa div button {
+    position: absolute;
+    background-color: #998e8e;
+    border-color: slategray;
+    border-radius: 50%;
+    color: black;
+    border-width: 3px;
+    transform: translate(-50%, -50%); }
+    .mapa div button :hover {
+      background-color: white;
+      border-color: black;
+      transform: scale(1.2); }
+
 footer {
   background-color: slategray;
   display: flex;
@@ -264,22 +375,24 @@ footer {
   .hero div {
     height: 1400px; }
   .hero div div div {
-    height: 1400px; }
+    height: auto; }
   .hero div div div img {
     height: auto; }
   .hero div div div div {
     width: 100%;
     height: auto;
     position: absolute;
-    top: 65%;
+    top: 100%;
     left: -5%; }
   .hero div div div div h5 {
-    top: 0%; }
+    top: -150%; }
   .hero div div div div p {
     width: 90%;
-    height: 400px; }
+    height: auto; }
   /*          SEC 2             */
-  .barra-grid {
+  .sec3 section {
+    height: 800px; }
+  .sec3 {
     height: 1200px; }
   /*            SEC 3            */
   .sec2 {
@@ -293,39 +406,160 @@ footer {
     text-align: center; } }
 
 @media screen and (max-width: 1200px) and (min-width: 1000px) {
-  .barra-grid {
-    grid-template-columns: 3fr;
-    grid-template-rows: 47% 6% 47%;
-    grid-template-areas: "imagen1  imagen3  imagen5 " "barra barra barra" " imagen2  imagen4  imagen6"; }
-  .card iframe {
-    width: auto; } }
+  .hero div div div div {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 100%;
+    left: -5%; }
+  .hero div div div div h5 {
+    top: -300%; }
+  .hero div div div div p {
+    width: 90%;
+    height: fit-content; }
+  .sec3 {
+    height: fit-content; }
+  .sec3 section {
+    height: 1200px;
+    grid-template-columns: 47% 6% 47%;
+    grid-template-rows: 3fr;
+    grid-template-areas: "imagen1  barra  imagen2 " "imagen3 barra imagen4" " imagen5  barra  imagen6"; }
+  .sec3 section .barra input {
+    position: absolute;
+    writing-mode: bt-lr;
+    transform: rotate(270deg); }
+  .sec3 section .barra :not(input) {
+    height: 100%; }
+  .sec3 section .barra .p2 {
+    display: flex;
+    align-self: flex-end;
+    height: fit-content; }
+  .sec3 section .barra .p1 {
+    display: flex;
+    align-self: flex-start;
+    height: fit-content; }
+  /*               MAPA               */
+  .mapa div button {
+    scale: 0.8; }
+  #btn1 {
+    left: 27%;
+    top: 43%; }
+  #btn2 {
+    left: 37%;
+    top: 55%; }
+  #btn3 {
+    left: 68%;
+    top: 38%; }
+  #btn4 {
+    left: 78%;
+    top: 60%; } }
 
 @media screen and (max-width: 1000px) {
-  .carousel {
+  .hero div {
+    height: 1000px; }
+  .hero div div div img {
     height: auto; }
-  .carousel-item img {
-    height: auto; }
-  .carousel-caption p {
+  .hero div div div div p {
     font-size: 25px;
     top: 10%; }
-  .carousel-caption h5 {
-    top: -10%; }
+  .hero div div div div h5 {
+    top: -20%;
+    left: 40%; }
   .sec2 {
     display: grid;
-    grid-template-rows: 200px 400px 50px 800px 400px 50px 800px; }
-  .barra-grid {
-    grid-template-columns: 3fr;
-    grid-template-rows: 47% 6% 47%;
-    grid-template-areas: "imagen1  imagen3  imagen5 " "barra barra barra" " imagen2  imagen4  imagen6"; }
+    grid-template-rows: 200px 400px 50px 800px 400px 50px 800px;
+    margin-top: 200px; }
+  .sec3 {
+    height: fit-content; }
+  .sec3 section {
+    height: fit-content;
+    grid-template-columns: 47% 6% 47%;
+    grid-template-rows: 3fr;
+    grid-template-areas: "imagen1  barra  imagen2 " "imagen3 barra imagen4" " imagen5  barra  imagen6"; }
+  .sec3 section .barra input {
+    position: absolute;
+    width: 95%;
+    writing-mode: bt-lr;
+    transform: rotate(270deg); }
+  .sec3 section .barra :not(input) {
+    height: 100%; }
+  .sec3 section .barra .p2 {
+    display: flex;
+    align-self: flex-end;
+    height: fit-content; }
+  .sec3 section .barra .p1 {
+    display: flex;
+    align-self: flex-start;
+    height: fit-content; }
   .sec2 h2 {
-    text-align: center; } }
+    text-align: center; }
+  /*           PROYECTO             */
+  .sec1Proyecto div iframe {
+    width: 500px;
+    height: 300px; }
+  .sec1Proyecto div div p {
+    font-size: 20px; }
+  .sec1Proyecto div div h5 {
+    font-size: 25px; }
+  /*               MAPA               */
+  .mapa h2 {
+    font-size: 30px; }
+  .mapa div img {
+    width: 100%;
+    height: 100%; }
+  .mapa div button {
+    scale: 0.7; }
+  #btn1 {
+    left: 27%;
+    top: 42%; }
+  #btn2 {
+    left: 37%;
+    top: 55%; }
+  #btn3 {
+    left: 70%;
+    top: 37%; }
+  #btn4 {
+    left: 77%;
+    top: 60%; } }
 
 @media screen and (max-width: 770px) {
-  .carousel-caption {
-    width: 350px;
-    top: 30%; }
+  .hero div div div div {
+    width: auto;
+    left: 10%; }
+  .hero div div div div p {
+    font-size: 20px; }
+  .sec3 section div img {
+    width: 100px;
+    height: 100px; }
+  .sec3 section div h3 {
+    font-size: 20px; }
+  .sec3 section div p {
+    font-size: 10px; }
+  .sec3 section .barra input {
+    width: 65vh; }
+  .sec3 section .barra p {
+    font-size: 15px; }
   .sec2 {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 200px 400px 50px 1500px 400px 50px 1500px;
-    grid-template-areas: "titulo" "foto1" "subtit1" "parrafo1" "foto2" "subtit2" "parrafo2"; } }
+    grid-template-rows: 200px 400px 50px 1200px 400px 50px 1200px;
+    grid-template-areas: "titulo" "foto1" "subtit1" "parrafo1" "foto2" "subtit2" "parrafo2"; }
+  /*               footer            */
+  footer p {
+    font-size: medium; } }
+
+@media screen and (max-width: 500px) {
+  .sec3 section .barra input {
+    width: 65vh; }
+  .sec2 p {
+    font-size: 25px; }
+  .sec1Proyecto div div p {
+    font-size: 15px; }
+  .sec1Proyecto div div h5 {
+    font-size: 20px; }
+  .sec1Proyecto div div {
+    font-size: 35px; }
+  .mapa h2 {
+    font-size: 20px; }
+  .mapa div button {
+    scale: 0.5; } }
