--- a/scss/base/_media-querys.scss
+++ b/scss/base/_media-querys.scss
@@ -29,7 +29,7 @@
     }
 
     .hero div div div {
-        height: 1400px;
+        height: auto;
     }
 
     .hero div div div img {
@@ -40,21 +40,24 @@
         width: 100%;
         height: auto;
         position: absolute;
-        top: 65%;
+        top: 100%;
         left: -5%;
     }
 
     .hero div div div div  h5 {
-        top: 0%;
+        top: -150%
     }
 
     .hero div div div div  p {
         width: 90%;
-        height: 400px;
+        height: auto;
     }
 
     /*          SEC 2             */
-    .barra-grid {
+    .sec3 section {
+        height: 800px;
+    }
+    .sec3{
         height: 1200px;
     }
 
@@ -84,70 +87,217 @@
 }
 
 @media screen and (max-width:1200px) and (min-width:1000px) {
-    .barra-grid {
-        grid-template-columns: 3fr;
-        grid-template-rows: 47% 6% 47%;
-        grid-template-areas:
-            "imagen1  imagen3  imagen5 "
-            "barra barra barra"
-            " imagen2  imagen4  imagen6"
-        ;
+
+    .hero div div div div  {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: 100%;
+        left: -5%;
+    }
+    .hero div div div div  h5 {
+        top: -300%
     }
 
-    .card iframe {
-        width: auto;
+    .hero div div div div  p {
+        width: 90%;
+        height: fit-content;
+    }
+
+    .sec3{
+        height: fit-content;
+    }
+    .sec3 section {
+        height: 1200px;
+        grid-template-columns: 47% 6% 47%;
+        grid-template-rows: 3fr;
+        grid-template-areas:
+            "imagen1  barra  imagen2 "
+            "imagen3 barra imagen4"
+            " imagen5  barra  imagen6"
+        ;
+    }
+    .sec3 section .barra input{
+        position: absolute;
+        writing-mode: bt-lr;
+        transform: rotate(270deg);
+    }
+    .sec3 section .barra :not(input){
+        height: 100%;
+    }
+    .sec3 section .barra .p2{
+        display: flex;
+        align-self: flex-end;
+        height: fit-content;
+    }
+    .sec3 section .barra .p1{
+        display: flex;
+        align-self: flex-start;
+        height: fit-content;
+    }
+
+    /*               MAPA               */
+    .mapa div button{
+        scale: 0.8;
+    }
+    #btn1{
+        left: 27%;
+        top: 43%;
+    
+    }
+    #btn2{
+        left: 37%;
+        top: 55%;
+    }
+    #btn3{
+        left: 68%;
+        top: 38%;
+    }
+    #btn4{
+        left: 78%;
+        top: 60%;
     }
 }
 
 @media screen and (max-width: 1000px) {
 
-    .carousel {
+    .hero div {
+        height: 1000px;
+    }
+
+    .hero div div div img {
         height: auto;
     }
 
-    .carousel-item img {
-        height: auto;
-    }
-
-    .carousel-caption p {
+    .hero div div div div p {
         font-size: 25px;
         top: 10%
     }
 
-    .carousel-caption h5 {
-        top: -10%
+    .hero div div div div h5 {
+        top: -20%;
+        left:40%
     }
 
     .sec2 {
         display: grid;
         grid-template-rows: 200px 400px 50px 800px 400px 50px 800px;
+        margin-top: 200px;
     }
 
-    .barra-grid {
-        grid-template-columns: 3fr;
-        grid-template-rows: 47% 6% 47%;
+    .sec3{
+        height: fit-content;
+    }
+    .sec3 section {
+        height: fit-content;
+        grid-template-columns: 47% 6% 47%;
+        grid-template-rows: 3fr;
         grid-template-areas:
-            "imagen1  imagen3  imagen5 "
-            "barra barra barra"
-            " imagen2  imagen4  imagen6"
+            "imagen1  barra  imagen2 "
+            "imagen3 barra imagen4"
+            " imagen5  barra  imagen6"
         ;
+    }
+    .sec3 section .barra input{
+        position: absolute;
+        width: 95%;
+        writing-mode: bt-lr;
+        transform: rotate(270deg);
+    }
+    .sec3 section .barra :not(input){
+        height: 100%;
+    }
+    .sec3 section .barra .p2{
+        display: flex;
+        align-self: flex-end;
+        height: fit-content;
+    }
+    .sec3 section .barra .p1{
+        display: flex;
+        align-self: flex-start;
+        height: fit-content;
     }
 
     .sec2 h2 {
         text-align: center;
     }
+/*           PROYECTO             */
+
+    .sec1Proyecto div iframe{
+        width: 500px;
+        height: 300px;
+    }
+    .sec1Proyecto div div p{
+        font-size: 20px;
+    }
+    .sec1Proyecto div div h5{
+        font-size: 25px;
+    }
+
+        /*               MAPA               */
+        .mapa h2{
+            font-size: 30px;
+        }
+
+        .mapa div img{
+            width: 100%;
+            height: 100%;
+        }
+
+        .mapa div button{
+            scale: 0.7;
+        }
+
+        #btn1{
+            left: 27%;
+            top: 42%;
+        
+        }
+        #btn2{
+            left: 37%;
+            top: 55%;
+        }
+        #btn3{
+            left: 70%;
+            top: 37%;
+        }
+        #btn4{
+            left: 77%;
+            top: 60%;
+        }
 }
 
 @media screen and (max-width:770px) {
-    .carousel-caption {
-        width: 350px;
-        top: 30%;
+    .hero div div div div {
+        width: auto;
+        left: 10%;
+    }
+    .hero div div div div p{
+        font-size: 20px;
+    }
+
+    .sec3 section div img{
+        width: 100px;
+        height: 100px;
+    }
+    .sec3 section div h3{
+        font-size: 20px;
+    }
+    .sec3 section div p{
+        font-size: 10px;
+    }
+
+    .sec3 section .barra input{
+        width: 65vh;
+    }
+    .sec3 section .barra p{
+        font-size: 15px;
     }
 
     .sec2 {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 200px 400px 50px 1500px 400px 50px 1500px;
+        grid-template-rows: 200px 400px 50px 1200px 400px 50px 1200px;
         grid-template-areas:
             "titulo"
             "foto1"
@@ -157,5 +307,36 @@
             "subtit2"
             "parrafo2"
         ;
+    }
+/*               footer            */
+footer p{
+    font-size:medium;
+}
+}
+
+@media screen and (max-width: 500px){
+    .sec3 section .barra input{
+        width: 65vh;
+    }
+
+    .sec2 p{
+        font-size: 25px;
+    }
+
+    .sec1Proyecto div div p{
+        font-size: 15px;
+    }
+    .sec1Proyecto div div h5{
+        font-size: 20px;
+    }
+    .sec1Proyecto div div{
+        font-size: 35px;
+    }
+
+    .mapa h2{
+        font-size: 20px;
+    }
+    .mapa div button{
+        scale: 0.5;
     }
 }
