--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,6 @@
 header {
+    background: rgb(112,128,144);
+    background: linear-gradient(180deg, rgba(112,128,144,1) 32%, rgba(125,139,153,0.9374124649859944) 62%, rgba(224,224,224,1) 100%);
     nav {
         div {
             a {
