--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -59,3 +59,14 @@ body {
     left: 78%;
     top: 60%;
 }
+
+
+/*             CONTACTOS            */
+
+.preguntasFrecuentes div div .card-body{
+    width: fit-content;
+}
+
+.infoUsuario form div .form-control{
+    width: 400px;
+}
