--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,8 @@ body {
   background-color: #00000000; }
 
 .carousel-indicators {
-  background-color: #00000000; }
+  background-color: #00000000;
+  height: 5px; }
 
 .carousel-control-next-icon {
   background-color: #000000;
@@ -52,6 +53,16 @@ body {
 
 .infoUsuario form div .form-control {
   width: 400px; }
+
+.barraTienda h2, .preguntasFrecuentes h2, .infoUsuario h3 {
+  color: white;
+  font-size: 30px;
+  font-weight: 400;
+  padding-bottom: 20px;
+  background-color: slategray;
+  border-radius: 10px;
+  text-align: center;
+  padding-inline: 20px; }
 
 header {
   background: slategray;
@@ -94,7 +105,7 @@ header {
     background-color: #00000000;
     position: absolute;
     top: 10%;
-    left: 58%; }
+    left: 10%; }
     .hero div div div div h5 {
       width: fit-content;
       padding: 0px 10px 5px 10px;
@@ -117,6 +128,10 @@ header {
       position: absolute;
       top: 10%;
       left: 10%; }
+
+.hero div button {
+  height: 400px;
+  top: 20%; }
 
 /*            seccion 2                  */
 .sec3 {
@@ -201,8 +216,9 @@ header {
 /*                 seccion 3               */
 .sec2 {
   display: grid;
+  margin-top: 200px;
   grid-template-columns: 30% 70%;
-  grid-template-rows: 300px 100px 400px 100px 400px;
+  grid-template-rows: 200px 100px 400px 100px 400px;
   grid-template-areas: "titulo titulo" ". subtit1" "foto1 parrafo1" ". subtit2" "foto2 parrafo2";
   padding-bottom: 30px; }
   .sec2 .titulo {
@@ -227,8 +243,7 @@ header {
     align-self: center;
     font-size: 50px;
     font-weight: 700;
-    padding: 0px 10px 0px 10px;
-    margin-bottom: 50px; }
+    padding: 0px 10px 0px 10px; }
   .sec2 h3 {
     width: fit-content;
     height: fit-content;
@@ -238,8 +253,6 @@ header {
     display: flex;
     font-size: 35px;
     font-weight: 300;
-    justify-content: center;
-    align-items: center;
     padding: 0px 10px 0px 10px; }
   .sec2 div {
     display: flex;
@@ -324,23 +337,16 @@ header {
 .barraTienda {
   display: flex;
   justify-content: space-evenly; }
-  .barraTienda h2 {
-    color: white;
-    font-size: 30px;
-    font-weight: 400;
-    padding-bottom: 20px;
-    background-color: slategray;
-    border-radius: 10px;
-    padding-inline: 20px; }
   .barraTienda button {
     background-color: slategray;
-    border: none; }
+    border: none;
+    margin-bottom: 10px; }
 
 .tienda div {
   display: grid;
   grid-template-columns: 33.3% 33.3% 33.3%;
-  grid-template-rows: 365px 365px;
-  grid-template-areas: "carta1 carta2 carta3" "carta4 carta5 carta6"; }
+  grid-template-rows: 375px 10px 375px;
+  grid-template-areas: "carta1 carta2 carta3" ". . ." "carta4 carta5 carta6"; }
   .tienda div .cardT1 {
     grid-area: carta1;
     display: flex;
@@ -352,6 +358,9 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+      .tienda div .cardT1 div a {
+        background-color: slategray !important;
+        border-color: black; }
   .tienda div .cardT2 {
     grid-area: carta2;
     display: flex;
@@ -363,6 +372,9 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+      .tienda div .cardT2 div a {
+        background-color: slategray !important;
+        border-color: black; }
   .tienda div .cardT3 {
     grid-area: carta3;
     display: flex;
@@ -374,6 +386,9 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+      .tienda div .cardT3 div a {
+        background-color: slategray !important;
+        border-color: black; }
   .tienda div .cardT4 {
     grid-area: carta4;
     display: flex;
@@ -385,6 +400,9 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+      .tienda div .cardT4 div a {
+        background-color: slategray !important;
+        border-color: black; }
   .tienda div .cardT5 {
     grid-area: carta5;
     display: flex;
@@ -396,6 +414,9 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+      .tienda div .cardT5 div a {
+        background-color: slategray !important;
+        border-color: black; }
   .tienda div .cardT6 {
     grid-area: carta6;
     display: flex;
@@ -407,6 +428,9 @@ header {
       flex-direction: column;
       justify-content: center;
       align-items: center; }
+      .tienda div .cardT6 div a {
+        background-color: slategray !important;
+        border-color: black; }
 
 .mapa h2 {
   font-size: 50px;
@@ -434,22 +458,18 @@ header {
       border-color: black;
       transform: scale(1.2); }
 
-.preguntasFrecuentes h2 {
-  color: white;
-  font-size: 30px;
-  font-weight: 400;
-  padding-bottom: 20px;
-  background-color: slategray;
-  border-radius: 10px;
-  width: 100%;
-  text-align: center;
-  padding-inline: 20px; }
-
 .preguntasFrecuentes {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 100px; }
+  .preguntasFrecuentes p button {
+    background: #cebfbf;
+    color: black;
+    border-color: black; }
+
+.infoUsuario form div {
+  margin-inline: 20px; }
 
 footer {
   background-color: slategray;
@@ -469,6 +489,10 @@ footer {
       display: inline-block;
       background-color: slategray;
       display: flex; }
+
+@media screen and (max-width: 1920px) and (min-width: 1750px) {
+  .hero div div div div {
+    left: 50%; } }
 
 @media screen and (max-width: 1750px) and (min-width: 1500px) {
   .hero div div div div {
@@ -517,6 +541,7 @@ footer {
     text-align: center; } }
 
 @media screen and (max-width: 1200px) and (min-width: 1000px) {
+  /*               INDEX               */
   .hero div div div div {
     width: 100%;
     height: auto;
@@ -566,8 +591,15 @@ footer {
     top: 60%; } }
 
 @media screen and (max-width: 1000px) {
+  /*               INDEX               */
+  .hero {
+    height: 1200px; }
+  .hero div div div div {
+    width: 600px;
+    height: 600px;
+    left: 10%; }
   .hero div {
-    height: 1000px; }
+    height: 1200px; }
   .hero div div div img {
     height: auto; }
   .hero div div div div p {
@@ -578,10 +610,9 @@ footer {
     left: 40%; }
   .sec2 {
     display: grid;
-    grid-template-rows: 200px 400px 50px 800px 400px 50px 800px;
-    margin-top: 200px; }
+    grid-template-rows: 200px 400px 50px 800px 400px 50px 800px; }
   .sec3 {
-    height: fit-content; }
+    height: 1200px; }
   .sec3 section {
     height: fit-content;
     grid-template-columns: 47% 6% 47%;
@@ -590,7 +621,6 @@ footer {
   .sec3 section .barra input {
     position: absolute;
     width: 95%;
-    writing-mode: bt-lr;
     transform: rotate(270deg); }
   .sec3 section .barra :not(input) {
     height: 100%; }
@@ -631,12 +661,31 @@ footer {
     top: 37%; }
   #btn4 {
     left: 77%;
-    top: 60%; } }
+    top: 60%; }
+  /*                TIENDA                   */
+  .tienda {
+    margin-bottom: 100px; }
+  .tienda div {
+    justify-content: center;
+    grid-template-columns: 286px 286px;
+    grid-template-rows: 375px 375px 375px;
+    grid-template-areas: "carta1 carta2" "carta3 carta4" "carta5 carta6"; }
+  .tienda div div img {
+    height: fit-content; } }
+
+@media screen and (max-width: 991px) {
+  .navbar-nav {
+    display: block;
+    width: auto; } }
 
 @media screen and (max-width: 770px) {
   .hero div div div div {
     width: auto;
     left: 10%; }
+  .hero div div div div h5 {
+    scale: 0.8;
+    top: 0%;
+    left: 30%; }
   .hero div div div div p {
     font-size: 20px; }
   .sec3 section div img {
@@ -650,27 +699,63 @@ footer {
     width: 65vh; }
   .sec3 section .barra p {
     font-size: 15px; }
-  .sec2 {
+  .sec3 {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 200px 400px 50px 1200px 400px 50px 1200px;
+    grid-template-rows: 200px 400px 50px 1000px 400px 50px 1000px;
     grid-template-areas: "titulo" "foto1" "subtit1" "parrafo1" "foto2" "subtit2" "parrafo2"; }
+  .sec3 h2 {
+    font-size: 30px; }
+  .sec3 {
+    height: 1000px; }
+  .sec2 {
+    margin-top: 0px; }
+  .sec2 h2 {
+    font-size: 35px; }
+  /*                 TIRNDA                */
+  .tienda div {
+    justify-content: center;
+    grid-template-columns: 286px;
+    grid-template-rows: 375px 375px 375px 375px 375px 375px;
+    grid-template-areas: "carta1" "carta2" "carta3" "carta4" "carta5" "carta6"; }
   /*               footer            */
   footer p {
     font-size: medium; } }
 
 @media screen and (max-width: 500px) {
+  /*            INDEX            */
+  .hero div div div div h5 {
+    top: 0%;
+    left: 30%; }
+  .hero div div div div p {
+    font-size: 18px; }
+  .sec2 {
+    grid-template-rows: 200px 400px 50px 1000px 400px 50px 1000px; }
   .sec3 section .barra input {
     width: 65vh; }
   .sec2 p {
     font-size: 25px; }
+  .sec2 div img {
+    scale: 0.7; }
+  /*            PROYECTO            */
   .sec1Proyecto div div p {
     font-size: 15px; }
+  .sec1Proyecto h2 {
+    font-size: 30px; }
   .sec1Proyecto div div h5 {
     font-size: 20px; }
   .sec1Proyecto div div {
     font-size: 35px; }
+  .sec1Proyecto div iframe {
+    width: 350px;
+    height: 200px; }
+  /*            MAPA            */
   .mapa h2 {
     font-size: 20px; }
   .mapa div button {
-    scale: 0.5; } }
+    scale: 0.5; }
+  /*            CONTACTOS            */
+  .infoUsuario form div input {
+    width: 300px !important; }
+  .infoUsuario form div textarea {
+    width: 300px !important; } }
