--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -16,7 +16,7 @@
                     background-color: #00000000;
                     position: absolute;
                     top: 10%;
-                    left: 58%;
+                    left: 10%;
                     h5{
                         width: fit-content;
                         padding: 0px 10px 5px 10px;
@@ -43,6 +43,10 @@
                     }
                 }
             }
+        }
+        button{
+            height: 400px;
+            top: 20%;
         }
     }
 }
@@ -157,8 +161,9 @@
  /*                 seccion 3               */
 .sec2{
     display: grid;
+    margin-top: 200px;
     grid-template-columns: 30% 70%;
-    grid-template-rows: 300px 100px 400px 100px 400px;
+    grid-template-rows: 200px 100px 400px 100px 400px;
     grid-template-areas:
         "titulo titulo"
         ". subtit1"
@@ -205,7 +210,6 @@
         font-size: 50px;
         font-weight: 700;
         padding: 0px 10px 0px 10px;
-        margin-bottom: 50px;
     }
     h3{
         width: fit-content;
@@ -216,8 +220,6 @@
         display: flex;
         font-size: 35px;
         font-weight: 300;
-        justify-content: center;
-        align-items: center;
         padding: 0px 10px 0px 10px;
     }
     div{
